Rajout de whitespace nowrap +TODO
Rajout de whitespace nowrap

TODO: Ajout de like et de son changement de couleur
Aussi mettre ne évidence la bordure en blanc
Le transormer en bouton aussi rajouter une barre pour afficher les icones avec un petie pfleche à droite

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,13 +9,16 @@
             
         </div>
         <div class="right-container">
-             <p class="text-right-container">Mettre mon logement</p>
+            <div class="text-right-container">
+                <p>Mettre mon logement</p>
+            </div>
+             
             <img src="../../assets/assets-airbnb/globe.svg" alt="icon" class="filter-red">
             <div class="bubble">
                 <img src="../../assets/assets-airbnb/bars.svg" alt="icon" class="filter-red">
                 <img src="../../assets/assets-airbnb/profile.svg" alt="icon" class="filter-red">
             </div>
-           <!-- header.component.html -->
+          
    
         </div>
     </div>
