Ajout de la scrollbar et de la pop up pour les cookies

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="scroll-container">
   <app-header></app-header>
+  <app-scrollbar></app-scrollbar>
   <app-home></app-home>
+  <app-cookie-pop-up></app-cookie-pop-up>
 </div>
