--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
 
 <div class="header-line">
+    <a href="http://localhost:4200">
       <img src="../../assets/assets-airbnb/logo.svg" alt="icon" class="filter-red">
+    </a>
         <div class="searchbar">
             <p>N'importe où</p>
             <p>Une semaine</p>
