--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,3 +1,13 @@
+.filter-red {
+  filter: invert(42%) sepia(32%) saturate(2363%) hue-rotate(323deg)
+    brightness(116%) contrast(104%);
+}
+
+.filter-gray {
+  filter: grayscale(100%);
+}
+
+
 .Img {
   width: 30vh;
   height: 25vh;
@@ -34,4 +44,14 @@
 
 .price {
   font-weight: bold;
+}
+
+.like {
+  filter: invert(42%) sepia(32%) saturate(2363%) hue-rotate(323deg) brightness(116%) contrast(104%);
+}
+
+.favorite-like {
+
+  filter: invert(0%) sepia(100%) saturate(100%) hue-rotate(0deg) brightness(100%) contrast(100%);
+  fill: #FF0000;
 }
