--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,6 +5,7 @@
 
 
 .header-line {
+  
   background-color: aqua;
   align-items: center;  //à enlever plus tard 
   width: 100%;
@@ -12,8 +13,10 @@
   justify-content: space-between;
   gap: 4rem;
   border-bottom: 2px solid #555; 
+  height: 8vh;
   padding-left: 1%;
   .searchbar {
+    padding-left: 8%;
     background-color: red;
     display: flex;
     white-space: nowrap;
@@ -23,7 +26,7 @@
     background-color: green;
     display: flex;
     gap: 1rem;
-    padding-right: 4%;
+    padding-right: 5%;
     align-items: center;
     .bubble {
       
@@ -43,6 +46,5 @@
 
 
 .text-right-container {
-
   white-space: nowrap; /* Cette propriété est nécessaire pour que text-overflow fonctionne */
 }
