Back-Up fin de séance
Api du gouv implémenté et OK

Début de l'implementation de la recherche sémantique.

Next : Mettre en forme et finir la recherche par ville pour afficher les bonnes cards

Puis faire le pop-up, les menus et les transitions

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
       <img src="../../assets/assets-airbnb/logo.svg" alt="icon" class="filter-red">
     </a>
         <div class="searchbar">
-            <p>N'importe où</p>
+            <input type="text" placeholder="N'importe où" id="search-input">
             <p>Une semaine</p>
             <p>Ajouter des voyageurs</p>
             <img src="../../assets/assets-airbnb/loupe.svg" alt="icon" class="filter-red">
