Implémentation de l'api du gouvernement fonctionnel et pour l'instant sur entrée OK
Todo l'afficher en temps sous le champ de saisie

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,4 +25,8 @@
         </div>
     </div>
   
-  
+
+    <div *ngFor="let city of listCity$ | async">
+        <p>{{ city.nom }}</p>
+      </div>
+      
