Implémentation de la recherche sémantique par zipCode OK

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <div *ngFor="let accommodation of accommodations" class="card-wrapper">
       <!-- Ajoutez une condition ngIf pour filtrer les cards -->
       <app-card [accommodation]="accommodation" 
-                *ngIf="matchesSearchText(accommodation.city.name)">
+                *ngIf="matchesSearchText(accommodation.city.name,accommodation.city.zipCode)">
       </app-card>
     </div>
   </div>
