--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,32 +1,46 @@
-
 <div class="header-line">
-    <a href="http://localhost:4200">
-      <img src="../../assets/assets-airbnb/logo.svg" alt="icon" class="filter-red">
-    </a>
-        <div class="searchbar">
-            <input type="text" placeholder="N'importe où" id="search-input">
-            <p>Une semaine</p>
-            <p>Ajouter des voyageurs</p>
-            <img src="../../assets/assets-airbnb/loupe.svg" alt="icon" class="filter-red">
-            
-        </div>
-        <div class="right-container">
-            <div class="text-right-container">
-                <p>Mettre mon logement</p>
-            </div>
-             
-            <img src="../../assets/assets-airbnb/globe.svg" alt="icon" class="filter-red">
-            <div class="bubble">
-                <img src="../../assets/assets-airbnb/bars.svg" alt="icon" class="filter-red">
-                <img src="../../assets/assets-airbnb/profile.svg" alt="icon" class="filter-red">
-            </div>
-          
-   
-        </div>
+  <a href="http://localhost:4200">
+    <img
+      src="../../assets/assets-airbnb/logo.svg"
+      alt="icon"
+      class="filter-red"
+    />
+  </a>
+  <div class="searchbar">
+    <input type="text" placeholder="N'importe où" id="search-input" list="city-suggestions" />
+    <datalist id="city-suggestions">
+      <option *ngFor="let city of listCity$ | async" [value]="city.nom"></option>
+    </datalist>
+        
+    <p>Une semaine</p>
+    <p>Ajouter des voyageurs</p>
+    <img
+      src="../../assets/assets-airbnb/loupe.svg"
+      alt="icon"
+      class="filter-red"
+    />
+  </div>
+  <div class="right-container">
+    <div class="text-right-container">
+      <p>Mettre mon logement</p>
     </div>
-  
 
-    <div *ngFor="let city of listCity$ | async">
-        <p>{{ city.nom }}</p>
-      </div>
-      
+    <img
+      src="../../assets/assets-airbnb/globe.svg"
+      alt="icon"
+      class="filter-red"
+    />
+    <div class="bubble">
+      <img
+        src="../../assets/assets-airbnb/bars.svg"
+        alt="icon"
+        class="filter-red"
+      />
+      <img
+        src="../../assets/assets-airbnb/profile.svg"
+        alt="icon"
+        class="filter-red"
+      />
+    </div>
+  </div>
+</div>
