Ajout du texte sous les icones de la scrollbar

--- a/src/app/components/scrollbar/scrollbar.component.html
+++ b/src/app/components/scrollbar/scrollbar.component.html
@@ -1,18 +1,82 @@
-<div class="scrollbar">
-    <img src="../../assets/assets_scrollbar/File1.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File2.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File3.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File4.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File5.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File6.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File7.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File8.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File9.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File10.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File11.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File12.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File13.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File14.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File15.jpg" alt="icon_scroll" class="icon_scroll">
-    <img src="../../assets/assets_scrollbar/File16.jpg" alt="icon_scroll" class="icon_scroll">
+
+<div class="scrollbar" >
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File1.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File2.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File3.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File4.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File5.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File6.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File7.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File8.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File9.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File10.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File11.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File12.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File13.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File14.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File15.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
+    
+    <div class="image-with-text">
+        <img src="../../assets/assets_scrollbar/File16.jpg" alt="icon_scroll" class="icon_scroll">
+        <p>Texte</p>
+    </div>
 </div>
