Rajout du drop-down menu

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -38,6 +38,8 @@
         *ngFor="let item of navItems"
         class="nav-item"
       > -->
+
+    
     <div class="bubble" (mouseenter)="showMenu = true" (mouseleave)="showMenu = false" >
       <img
         src="../../assets/assets-airbnb/bars.svg"
@@ -49,15 +51,15 @@
         alt="icon"
         class="filter-red"
       />
-      
+      <div class="menu" *ngIf="showMenu">
+        <!-- Contenu du menu -->
+        <!-- Vous pouvez ajouter des liens ou des options de menu ici -->
+        <ul>
+          <p><a href="#">Option 1</a></p>
+          <p><a href="#">Option 2</a></p>
+          <p><a href="#">Option 3</a></p>
+        </ul>
+    </div>
   </div>
-  <div class="menu" *ngIf="showMenu">
-    <!-- Contenu du menu -->
-    <!-- Vous pouvez ajouter des liens ou des options de menu ici -->
-    <ul>
-      <li><a href="#">Option 1</a></li>
-      <li><a href="#">Option 2</a></li>
-      <li><a href="#">Option 3</a></li>
-    </ul>
-</div>
+  
 </div>
