--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -26,7 +26,9 @@
     gap: 1rem;
     padding-right: 5%;
     align-items: center;
+    height: 100%;
     .bubble {
+      position: relative;
       box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
         rgba(0, 0, 0, 0.23) 0px 6px 6px;
       display: flex;
@@ -44,5 +46,16 @@
 
 .text-right-container {
   white-space: nowrap; /* Cette propriété est nécessaire pour que text-overflow fonctionne */
+}
+
+.menu {
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+  rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  background-color: white;
+  border: 2px solid #555;
+  border-radius: 10px;
+  position: absolute;
+  top: 130%; /* Position en bas de la .bubble */
+  left: 10%; /* ou right: 0; pour ajuster la position horizontalement */
 }
 
