Ajout d'une base de données locales avec les coordonnées géographiques

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,6 +10,10 @@ body {
   gap:3rem;
 }
 
-.test1{
-  background-color: aqua;
+
+.load{
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+
 }
