--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
 }
 
 .header-line {
-  background-color: aqua;
+  //background-color: aqua;
   align-items: center; //à enlever plus tard
   width: 100%;
   display: flex;
@@ -15,13 +15,13 @@
   padding-left: 1%;
   .searchbar {
     padding-left: 8%;
-    background-color: red;
+    //background-color: red;
     display: flex;
     white-space: nowrap;
     gap: 2rem;
   }
   .right-container {
-    background-color: green;
+    //background-color: green;
     display: flex;
     gap: 1rem;
     padding-right: 5%;
@@ -51,7 +51,7 @@
 .menu {
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
   rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  background-color: white;
+  //background-color: white;
   border: 2px solid #555;
   border-radius: 10px;
   position: absolute;
