--- a/src/app/components/scrollbar/scrollbar.component.scss
+++ b/src/app/components/scrollbar/scrollbar.component.scss
@@ -5,14 +5,43 @@
     margin-right: 1vh;
     display: flex;
     gap:4rem;
+    overflow-x: auto; /* Ajoutez cette propriété pour activer la barre de défilement horizontale */
+    white-space: nowrap; /* Évite que les éléments ne passent à la ligne */
+    border: 1px solid gray;
     .icon_scroll{
         width: 3vh;
         height: 3vh;
     }
     justify-content: space-between;
-    border: 2px solid gray;
 }
 
 .image-with-text{
     font-size: small;
+    display: inline-block; /* Assurez-vous que les éléments restent en ligne */
+    vertical-align: top; /* Alignez les éléments en haut de la ligne */
+}
+
+
+.icon_scroll {
+    width: 3vh;
+    height: 3vh;
+    
+}
+/* Masquer la barre de défilement */
+.scrollbar::-webkit-scrollbar {
+    width: 0.5rem; /* Largeur de la barre de défilement (peut être ajustée) */
+    height: 0.5rem; /* Hauteur de la barre de défilement (peut être ajustée) */
+    display: none; /* Masquer la barre de défilement */
+}
+
+
+.horizontal-container{
+   display:flex;
+   align-items: center;
+}
+
+.arrow{
+    width: 2vh;
+    height: 2vh;
+    margin: 1vh;
 }
