Ajout de la carte via l'api leaflet d'openstreetmap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   <app-scrollbar></app-scrollbar>
   <app-home></app-home>
   <app-cookie-pop-up></app-cookie-pop-up>
+  <!-- <app-maps></app-maps> -->
 </div>
