--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,8 +12,8 @@
           <ng-container *ngIf="item.name === accommodation.city.name">
             <!-- <p>{{ item.name }}</p> -->
             <div *ngFor="let coordinate of item.Coordinates" class="sub-item">
-              <p>Latitude: {{ coordinate.lat }}</p>
-              <p>Longitude: {{ coordinate.lon }}</p>
+              <!-- <p>Latitude: {{ coordinate.lat }}</p> -->
+              <!-- <p>Longitude: {{ coordinate.lon }}</p> -->
             </div>
           </ng-container>
         </div>
